added loading photos functionality to the application

--- a/Lamode/Views/Home/AdminOnly.cshtml
+++ b/Lamode/Views/Home/AdminOnly.cshtml
@@ -5,3 +5,8 @@
 
 <h2>AdminOnly</h2>
 
+<div>
+    @Html.ActionLink("Logout", "Logout")
+    @Html.ActionLink("AddImage", "AddImage", new { ViewBag.AdminUser })
+
+</div>
