--- a/Lamode/Views/Home/SecureArea.cshtml
+++ b/Lamode/Views/Home/SecureArea.cshtml
@@ -7,4 +7,6 @@
 
 <div>
     @Html.ActionLink("Logout", "Logout")
+    @Html.ActionLink("AddImage", "AddImage", new { ViewBag.AdminUser })
+
 </div>
