--- a/Lamode/Views/Home/BeforeRegister.cshtml
+++ b/Lamode/Views/Home/BeforeRegister.cshtml
@@ -6,16 +6,18 @@
 <!DOCTYPE html>
 
 <link href="~/css/BeforeRegister.css" rel="stylesheet" />
-<h2>BeforeRegister</h2>
-<br /><br /><br /><br /><br />z
+<h2 class="text-center">Tell Us Who You Are</h2>
+<br /><br /><br /><br /><br />
 
     <div id="wrap">
         <form action="Register" method="get">
             <div class="left">
+                <label class="h1">Artist</label>
+                <br />
                 
-                <select name="registeredPeople">
+                <select class="form-control center-block" name="registeredPeople">
                     <option value="Select Category">Select Category</option>
-                    <option value="Model">Mode</option>
+                    <option value="Model">Model</option>
                     <option value="Photograpger">Photograpger</option>
                     <option value="Makeup Artist">Makeup Artist</option>
                     <option value="Wardrobe">Wardrobe</option>
@@ -29,14 +31,15 @@
                     <option value="1">1</option>
                 </select>
                 @*<input type="text" name="oneTwo" hidden value="1">*@
-                <input type="submit" value="GO" id="1">
-            </div>
+                    <button class="btn btn-default" type="submit" id="1">GO</button>
+              </div>
             
           </form>
         <form action="Register" method="get">
             <div class="right">
-                
-                <select name="registeredPeople">
+                <label class="h1">Recruiter</label>
+                <br />
+                <select class="form-control center-block" name="registeredPeople">
                     <option value="Select Category">Select Category</option>
                     <option value="Modeling Agent">Modeling Agent</option>
                     <option value="Casting Director">Casting Director</option>
@@ -53,7 +56,7 @@
                     <option value="2">2</option>                 
                 </select>
                 @*<input type="text" name="oneTwo" hidden value="2">*@
-                <input type="submit" value="GO" id="2">
+                <button class ="btn btn-default" type="submit"  id="2">GO</button>
             </div>
 
         </form>
