moved data base from azure to my server

--- a/Lamode/Views/Home/SpecialUser.cshtml
+++ b/Lamode/Views/Home/SpecialUser.cshtml
@@ -7,6 +7,6 @@
 
 <div>
     @Html.ActionLink("Logout", "Logout")
-    @Html.ActionLink("AddImage", "AddImage")
+   @Html.ActionLink("AddImage", "AddImage", new { Id = ViewBag.SpecialUser })
 
 </div>
