enable the lockout feature for consecutive failed logins

--- a/Lamode/Views/Home/AdminOnly.cshtml
+++ b/Lamode/Views/Home/AdminOnly.cshtml
@@ -7,6 +7,6 @@
 
 <div>
     @Html.ActionLink("Logout", "Logout")
-    @Html.ActionLink("AddImage", "AddImage", new { Id = ViewBag.AdminUser })
+    @Html.ActionLink("AddImage", "AddImage", "Image", new { Id = ViewBag.AdminUser })
 
 </div>
