cleaned the menu and add contact us form in the index.

--- a/Lamode/Views/Home/BeforeRegister.cshtml
+++ b/Lamode/Views/Home/BeforeRegister.cshtml
@@ -18,7 +18,7 @@
                 <select class="form-control center-block" name="registeredPeople">
                     <option value="Select Category">Select Category</option>
                     <option value="Model">Model</option>
-                    <option value="Photograpger">Photograpger</option>
+                    <option value="Photograpger">Photographer</option>
                     <option value="Makeup Artist">Makeup Artist</option>
                     <option value="Wardrobe">Wardrobe</option>
                     <option value="Hair Stylist">Hair Stylist</option>
