--- a/Lamode/Views/Home/Index.cshtml
+++ b/Lamode/Views/Home/Index.cshtml
@@ -22,6 +22,7 @@
     <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
     <!-- Theme CSS -->
     <link href="css/creative.min.css" rel="stylesheet">
+    <link href="~/css/Style.css" rel="stylesheet" />
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -54,30 +55,31 @@
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
                     </li>
-                    <li>
-                   
-                        <a href="@Url.Action("BeforeRegister", "Home")" class="page-scroll">
-                            Join
-                        </a>
-                    </li>
-                    <li>
-                 
-                        <a href="@Url.Action("Login", "Home")" class="page-scroll">
-                            Login
-                        </a>
-                    </li>
 
-                    <li>                     
-                        <a href="@Url.Action("AddRole", "Home")" class="page-scroll">
-                            Add Role
-                        </a>
-                    </li>
-                    <li>
-                        <a href="@Url.Action("AddUserToRole", "Home")" class="page-scroll">
-                            Add User To A Role
-                        </a>
-                    </li>
-                   
+                    @{
+                        if (User.Identity.IsAuthenticated)
+                        {
+
+                            <li>
+                                <a href="@Url.Action("Logout", "Home")" class="page-scroll">
+                                    Logout
+                                </a>
+                            </li>
+                        }
+                        else
+                        {
+                            <li>
+                                <a href="@Url.Action("Login", "Home")" class="page-scroll">
+                                    Login
+                                </a>
+                            </li>
+                            <li>
+                                <a href="@Url.Action("BeforeRegister", "Home")" class="page-scroll">
+                                    Join
+                                </a>
+                            </li>
+                        }
+                    }
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -275,11 +277,31 @@
                 <div class="col-lg-4 col-lg-offset-2 text-center">
                     <i class="fa fa-phone fa-3x sr-contact"></i>
                     <p>Toll free: 1(888) 988-6658</p>
-                </div>
-                <div class="col-lg-4 text-center">
+
+
+                    <div id="contact-area">
+
+                        <form method="post" action="contactengine.php">
+                            <label for="Name">Name:</label>
+                            <input type="text" name="Name" id="Name" />
+
+                            <label for="City">City:</label>
+                            <input type="text" name="City" id="City" />
+
+                            <label for="Email">Email:</label>
+                            <input type="text" name="Email" id="Email" />
+
+                            <label for="Message">Message:</label><br />
+                            <textarea name="Message" rows="20" cols="20" id="Message"></textarea>
+                            <input type="submit" name="submit" value="Submit" class="submit-button" />
+                        </form>
+
+
+                    </div>
+                @*<div class="col-lg-4 text-center">
                     <i class="fa fa-envelope-o fa-3x sr-contact"></i>
                     <p><a href="mailto:your-email@your-domain.com">feedback@startbootstrap.com</a></p>
-                </div>
+                </div>*@
             </div>
         </div>
     </section>
