--- a/Lamode/Views/Shared/_Layout.cshtml
+++ b/Lamode/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
     <script src="~/Scripts/modernizr-2.6.2.js"></script>
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
+    @*<div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -24,8 +24,69 @@
                 </ul>
             </div>
         </div>
-    </div>
+    </div>*@
+    <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
+        <div class="container-fluid">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
+                </button>
+                <a class="navbar-brand page-scroll" href="#page-top">La Mode</a>
+            </div>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                    
+                    <li>
+                        <a href="@Url.Action("Index", "Home")" class="page-scroll">
+                            Home
+                        </a>
+                    </li>
+                    @{
+                        if (User.IsInRole("Admin"))
+                        {
+                            <li>
+                                <a href="@Url.Action("AddUserToRole", "Home")" class="page-scroll">
+                                    Add User To Role
+                                </a>
+                            </li>
+                            <li>
+                                <a href="@Url.Action("AddRole", "Home")" class="page-scroll">
+                                    Add Role
+                                </a>
+                            </li>
 
+                        }
+                        if (User.Identity.IsAuthenticated)
+                        {
+
+                            <li>
+                                <a href="@Url.Action("Logout", "Home")" class="page-scroll">
+                                    Logout
+                                </a>
+                            </li>
+                        }
+                        else
+                        {
+                            <li>
+                                <a href="@Url.Action("Login", "Home")" class="page-scroll">
+                                    Login
+                                </a>
+                            </li>
+                            <li>
+                                <a href="@Url.Action("BeforeRegister", "Home")" class="page-scroll">
+                                    Join
+                                </a>
+                            </li>
+                        }
+                    }
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container-fluid -->
+    </nav>
     <div class="container body-content">
         @RenderBody()
        
