--- a/Lamode/css/Style.css
+++ b/Lamode/css/Style.css
@@ -37,3 +37,8 @@ label {
 	font-size: 13px;
     font-family: Arial, Helvetica, sans-serif;
 }
+
+
+input.btn.btn-primary.btn-xl.page-scroll {
+    float: right;
+}
