--- a/Lamode/Views/Home/BeforeRegister.cshtml
+++ b/Lamode/Views/Home/BeforeRegister.cshtml
@@ -18,7 +18,7 @@
                 <select class="form-control center-block" name="registeredPeople">
                     <option value="Select Category">Select Category</option>
                     <option value="Model">Model</option>
-                    <option value="Photograpger">Photographer</option>
+                    <option value="Photographer">Photographer</option>
                     <option value="Makeup Artist">Makeup Artist</option>
                     <option value="Wardrobe">Wardrobe</option>
                     <option value="Hair Stylist">Hair Stylist</option>
@@ -62,20 +62,5 @@
         </form>
 
     </div>
-
-@*<script>
-    window.onload = function () {
-        var oneTwo = 0;
-        var submit1 = document.getElementById("1");
-        submit1.onclick = function () {
-            oneTwo = 1;
-        }
-        var submit2 = document.getElementById("2");
-        submit2.onclick = function () {
-            oneTwo = 2;
-        }
-       
-    }
-</script>*@
 
 
