--- a/Lamode/Views/Home/Login.cshtml
+++ b/Lamode/Views/Home/Login.cshtml
@@ -35,37 +35,17 @@
                 <input type="submit" value="Login" class="btn btn-default" />
             </div>
         </div>
+        <div class="col-md-12">
+            @Html.Raw(ViewBag.ErrorLoginMessage)
+        </div>
     </div>
 }
-<div class="login">
-    <h2 class="login__title">
-        Login
-    </h2>
-    <div class="row login__sociallogin">
-        <div class="col-xs-6 login__sociallogin__svg">
-            <a href="#"><img src="img/twittersignin.svg" /></a>
-        </div>
-        <div class="col-xs-6 login__sociallogin__svg">
-            <a href="#"><img src="img/facebooksignin.svg" /></a>
-        </div>
+  
+    <div>
+        @Html.ActionLink("Back to List", "Index")
     </div>
-    <input class="login__input" type="text" name="username" placeholder="Username">
-    <input class="login__input" type="password" name="pw" placeholder="Password">
-    <input class="login__checkbox" checked="checked" id="remember_1" name="remember" type="checkbox">
-    <label class="remember" for="remember_1">
-        <i class="fa fa-check"></i>
-        <span class="labeltext">Remember me?</span>
-    </label>
-    <button class="login__loginbutton">Log in</button>
-    <a href="#" class="login__forgotpassword">Forgot your password?</a>
-</div>
 
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
-
-<script src="~/Scripts/jquery-1.10.2.min.js"></script>
-<script src="~/Scripts/jquery.validate.min.js"></script>
-<script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+    <script src="~/Scripts/jquery-1.10.2.min.js"></script>
+    <script src="~/Scripts/jquery.validate.min.js"></script>
+    <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
 
