--- a/Lamode/css/loginRegistrationCss.css
+++ b/Lamode/css/loginRegistrationCss.css
@@ -1,96 +1,193 @@
-﻿.register {
-	background-color: #ffffff;
-	box-shadow: 0 5px 15px rgba(0, 0, 0, 0.05);
-	text-align: center;
-	padding: 15px;
-	&__input {
-		width: 100%;
-		margin: 0 auto;
-		margin-top: 15px;
-		padding: 10px;
-		border: 1px solid #C9D2E0;
-		border-radius: 3px;
-		color: #747A84;
-		transition: border 0.2s;
-		&:focus {
-			outline: 0;
-			border: 1px solid #96CA2D;
-		}
-	}
-	&__select {
-		width: 100%;
-		height: 40px;
-    margin: 0 auto;
-		position: relative;
-    margin-top: 15px;
-		padding: 2px;
-    border: 1px solid #C9D2E0;
-    border-radius: 3px;
-		color: #747A84;
-    transition: border 0.2s;
-    background-color: inherit;
-		overflow: hidden;
-		span {
-			position: absolute;
-			right: 7px;
-			width: 10px;
-			height: 8px;
-			top: 34%;
-		}
-		select {
-			 appearance:none;
-			 width:120%;
-			 background:none;
-			 background:transparent;
-			 border:none;
-			 outline:none;
-			 cursor:pointer;
-			 padding:7px 10px;
-		}
-	}
-	&__select--inline { // a style for the select field to be on one line
-		width: inherit;
-		min-width: 31%;
-		display: inline-block;
-		margin-left: 2.5px;
-		margin-right: 2.5px;
-		@media only screen and (max-width : 1200px) { // media query for the field to be full width while on mobile
-			width: 100%;
-			display: block;
-			margin-left: inherit;
-			margin-right: inherit;
-		}
-	}
-	&__regbutton {
-		width: 100%;
-		margin: 20px 0;
-		padding: 10px;
-		border: none;
-		border-radius: 3px;
-		background-color: #96CA2D;
-		color: #fff;
-		font-weight: bold;
-		transition: background-color 0.3s;
-		&:hover {
-			background-color: #79A029;
-		}
-		&:focus {
-			outline:0;
-		}
-	}
-	// styling the placeholder text //
-	::-webkit-input-placeholder {
-   color: #b0bed1;
-	}
-	:-moz-placeholder { /* Firefox 18- */
-	   color: #b0bed1;
-	}
+﻿@import "compass/css3";
 
-	::-moz-placeholder {  /* Firefox 19+ */
-	   color: #b0bed1;
-	}
-	:-ms-input-placeholder {
-	   color: #b0bed1;
-	}
-	// styling the place holder text //
+$body-bg: #c1bdba;
+$form-bg: #13232f;
+$white: #ffffff;
+
+$main: #1ab188;
+$main-light: lighten($main,5%);
+$main-dark: darken($main,5%);
+
+$gray-light: #a0b3b0;
+$gray: #ddd;
+
+$thin: 300;
+$normal: 400;
+$bold: 600;
+$br: 4px;
+
+*, *:before, *:after {
+  box-sizing: border-box;
+}
+
+html {
+	overflow-y: scroll; 
+}
+
+body {
+  background:$body-bg;
+  font-family: 'Titillium Web', sans-serif;
+}
+
+a {
+  text-decoration:none;
+  color:$main;
+  transition:.5s ease;
+  &:hover {
+    color:$main-dark;
+  }
+}
+
+.form {
+  background:rgba($form-bg,.9);
+  padding: 40px;
+  max-width:600px;
+  margin:40px auto;
+  border-radius:$br;
+  box-shadow:0 4px 10px 4px rgba($form-bg,.3);
+}
+
+.tab-group {
+  list-style:none;
+  padding:0;
+  margin:0 0 40px 0;
+  &:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+  li a {
+    display:block;
+    text-decoration:none;
+    padding:15px;
+    background:rgba($gray-light,.25);
+    color:$gray-light;
+    font-size:20px;
+    float:left;
+    width:50%;
+    text-align:center;
+    cursor:pointer;
+    transition:.5s ease;
+    &:hover {
+      background:$main-dark;
+      color:$white;
+    }
+  }
+  .active a {
+    background:$main;
+    color:$white;
+  }
+}
+
+.tab-content > div:last-child {
+  display:none;
+}
+
+
+h1 {
+  text-align:center;
+  color:$white;
+  font-weight:$thin;
+  margin:0 0 40px;
+}
+
+label {
+  position:absolute;
+  transform:translateY(6px);
+  left:13px;
+  color:rgba($white,.5);
+  transition:all 0.25s ease;
+  -webkit-backface-visibility: hidden;
+  pointer-events: none;
+  font-size:22px;
+  .req {
+  	margin:2px;
+  	color:$main;
+  }
+}
+
+label.active {
+  transform:translateY(50px);
+  left:2px;
+  font-size:14px;
+  .req {
+    opacity:0;
+  }
+}
+
+label.highlight {
+	color:$white;
+}
+
+input, textarea {
+  font-size:22px;
+  display:block;
+  width:100%;
+  height:100%;
+  padding:5px 10px;
+  background:none;
+  background-image:none;
+  border:1px solid $gray-light;
+  color:$white;
+  border-radius:0;
+  transition:border-color .25s ease, box-shadow .25s ease;
+  &:focus {
+		outline:0;
+		border-color:$main;
+  }
+}
+
+textarea {
+  border:2px solid $gray-light;
+  resize: vertical;
+}
+
+.field-wrap {
+  position:relative;
+  margin-bottom:40px;
+}
+
+.top-row {
+  &:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+
+  > div {
+    float:left;
+    width:48%;
+    margin-right:4%;
+    &:last-child { 
+      margin:0;
+    }
+  }
+}
+
+.button {
+  border:0;
+  outline:none;
+  border-radius:0;
+  padding:15px 0;
+  font-size:2rem;
+  font-weight:$bold;
+  text-transform:uppercase;
+  letter-spacing:.1em;
+  background:$main;
+  color:$white;
+  transition:all.5s ease;
+  -webkit-appearance: none;
+  &:hover, &:focus {
+    background:$main-dark;
+  }
+}
+
+.button-block {
+  display:block;
+  width:100%;
+}
+
+.forgot {
+  margin-top:-20px;
+  text-align:right;
 }
