--- a/Lamode/Views/Shared/_LayoutUserPartial.cshtml
+++ b/Lamode/Views/Shared/_LayoutUserPartial.cshtml
@@ -8,10 +8,10 @@
     <meta name="author" content="">
     <title>Simple Sidebar - Start Bootstrap Template</title>
     <!-- Bootstrap Core CSS -->
-    
+
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
     <!-- Custom CSS -->
-   
+
     <link href="~/css/simple-sidebar.css" rel="stylesheet" />
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -26,18 +26,16 @@
         <div id="sidebar-wrapper">
             <ul class="sidebar-nav">
                 <li class="sidebar-brand">
-                    <a href="#">
-                        La Mode
-                    </a>
+                    
                 </li>
                 <li>
                     <a href="#">Dashboard</a>
                 </li>
                 <li>
-                    <a href="#">Shortcuts</a>
+                    @Html.ActionLink("Add Image", "AddImage", "Image", new { ViewBag.AdminUser }, null)
                 </li>
                 <li>
-                    <a href="#">Overview</a>
+                    @Html.ActionLink("Search a user", "Index", "Search")
                 </li>
                 <li>
                     <a href="#">Events</a>
@@ -67,7 +65,7 @@
                 </div>
             </div>
         </div>
-        @RenderBody()
+
         <!-- /#page-content-wrapper -->
     </div>
     <!-- /#wrapper -->
@@ -76,6 +74,11 @@
     <!-- Bootstrap Core JavaScript -->
     <script src="~/js/bootstrap.min.js"></script>
     <!-- Menu Toggle Script -->
+    <style>
+        div#sidebar-wrapper {
+         background: #002699;
+     }
+    </style>
     <script>
     $("#menu-toggle").click(function(e) {
         e.preventDefault();
@@ -84,5 +87,6 @@
     </script>
 </body>
 </html>
+
 
 
