--- a/Lamode/Views/Image/AddImage.cshtml
+++ b/Lamode/Views/Image/AddImage.cshtml
@@ -3,12 +3,14 @@
 @{
     ViewBag.Title = "AddImage";
 }
+@{
+    if (User.IsInRole("User"))
+    {
+        ViewBag.TitrlePage = "Upload your photos ";
+        @Html.Partial("_LayoutUserPartial")
 
-<h2>AddImage</h2>
-
-
-@using (Html.BeginForm("AddImage", "Image", FormMethod.Post, new { enctype = "multipart/form-data" }))
-{
+        using (Html.BeginForm("AddImage", "Image", new { Id = new { ViewBag.Id } } , FormMethod.Post, new { enctype = "multipart/form-data" }))
+        {
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
@@ -46,12 +48,14 @@
             </div>
         </div>
     </div>
+        }
+    }
 }
 
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
-
+  
 <script src="~/Scripts/jquery-1.10.2.min.js"></script>
 <script src="~/Scripts/jquery.validate.min.js"></script>
 <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
