--- a/Lamode/css/simple-sidebar.css
+++ b/Lamode/css/simple-sidebar.css
@@ -99,7 +99,9 @@
     color: #fff;
     background: none;
 }
-
+.form-horizontal {
+    margin-left: 250px;
+}
 @media(min-width:768px) {
     #wrapper {
         padding-left: 250px;
